<resources>
    <string name="app_name">Flicq</string>
    <!--  <string name="default_imu">Smith</string> -->
    <string name="about">About</string>
    <string name="app_title">Flicq</string>
    <string name="absoluteLabel">Absolute</string>
    <string name="accRateLabel">Accelerometer sample rate: </string>
    <string name="angle">Angle</string>
    <string name="angleUnits">radians</string>
    <string name="back">Back</string>
    <string name="btPrefix">Blue</string>
    <string name="btPrefixLabel">Bluetooth device prefix </string>
    <string name="cancel">Cancel</string>
    <string name="center">Center</string>
    <string name="clear_screen">CLS()</string>
    <string name="dash">-</string>
    <string name="defaultOutputFile">fslDemoLog.txt</string>
    <string name="emailLabel">Default email address:</string>
    <string name="emailPrompt">Enter your email here</string>
    <string name="enable_device_debug">Enable debug packet display</string>
    <string name="enable_javascript">Enable Javascript</string>
    <string name="enable_rpc">Enable roll/pitch/compass display</string>
    <string name="enable_remote">Automatically enable Bluetooth on entry</string>
    <string name="enable_virtual_gyro">Enable angular rate display</string>
    <string name="exit">Exit</string>
    <string name="feedbackEmailAddr">soundararajan.dhakshinamoorthy@flicq.com</string>
    <string name="fileNameLabel">Logger output filename:</string>
    <string name="fileNamePrompt">Enter your output filename here</string>
    <string name="fl_enable">File logging enable </string>
    <string name="forward">Forward</string>
    <string name="gyroRateLabel">Gyro sample rate: </string>
    <string name="help">Help</string>
    <string name="hex_enable">Hex Display (Remote only) </string>
    <string name="ipCode">192.168.0.0</string>
    <string name="ipCodeLabel">Wi-Go IP Code </string>
    <string name="ipPort">15000</string>
    <string name="ipPortLabel">Wi-Go Port Number </string>
    <string name="local_lpf_enable">Enable low pass filtering on local acc/mag/gyro</string>
    <string name="local_use_6_axis">Use 6 axis local fusion</string>
    <string name="log_tag">SensorFusion</string>
    <string name="lpf_enable">LPF Enable </string>
    <string name="magRateLabel">Magnetometer sample rate: </string>
    <string name="magnitude">Magnitude</string>
    <string name="max">Maximum</string>
    <string name="maxFileMsgsLabel">Max # of messages to record:</string>
    <string name="maxFileMsgsPrompt">Enter your max # of messages here</string>
    <string name="min">Minimum</string>
    <string name="mean">Mean</string>
    <string name="menu_settings">Settings</string>
    <string name="orientationLabel">Screen Orientation: </string>
    <string name="preferences">Set preferences</string>
    <string name="prefsScreen">Preferences Screen:</string>
    <string name="q0">q0</string>
    <string name="q1">q1</string>
    <string name="q2">q2</string>
    <string name="q3">q3</string>
    <string name="q0_units">= cos(theta/2)</string>
    <string name="q1_units">= X sin(theta/2)</string>
    <string name="q2_units">= Y sin(theta/2)</string>
    <string name="q3_units">= Z sin(theta/2)</string>
    <string name="quantity">Quantity</string>
    <string name="quaternion">quaternion</string>
    <string name="rate">Rate</string>
    <string name="rate_units">samples/sec</string>
    <string name="rm_prompt">Select Rotation Mode</string>
    <string name="rotationVectorRateLabel">Rotaton Vector sample rate: </string>
    <string name="rtHz">/rtHz</string>
    <string name="save_exit">Save and Exit</string>
    <string name="sensorLabel">A REALLY, REALLY, Long Sensor Name: </string>
    <string name="ssid">SPEEDWAY</string>
    <string name="ssidLabel">WiGo SSID </string>
    <string name="statsFileNameLabel">Statistics output filename:</string>
    <string name="statsOutputFile">statistics.html</string>
    <string name="stddev">StdDev</string>
    <string name="tbd">TBD</string>
    <string name="title_activity_main">Freescale Sensor Fusion Toolbox</string>
    <string name="units">Units</string>
    <string name="value">Value</string>
    <string name="welcome">Application log entries will be shown in this pane.\n</string>
    <string name="x">X</string>
    <string name="y">Y</string>
    <string name="z">Z </string>
    <string name="zeroedLabel">Zeroed</string>
    <string-array name="orientations">
        <item>Portrait</item>
        <item>Landscape</item>
    </string-array>
    <string-array name="rm_arrays">
        <item>Source = STOPPED</item>
        <item>Source = Local Mag/Accel</item>
        <item>Source = Local 9-Axis</item>
        <item>Source = Remote</item>
        <item>Source = Fixed Rotation</item>
    </string-array>
    <string-array name="doc_arrays">
        <item>Page = Overview</item>
        <item>Page = Rotations and Orientation: Part 1</item>
        <item>Page = Rotations and Orientation: Part 2</item>
        <item>Page = Algorithms</item>
        <item>Page = Gathering Statistics</item>
        <item>Page = Hardware &amp; Software Requirements</item>
        <item>Page = Bluetooth Packet Structure</item>
        <item>Page = Data Logger</item>
        <item>Page = Device View</item>
        <item>Page = Panorama View</item>
        <item>Page = Canvas View</item>
        <item>Page = Credits</item>
        <item>Page = Setting Preferences</item>
        <item>Page = Change Log</item>
        <item>Page = Freescale Semiconductor Web Site</item>
        <item>Page = General WWW</item>
        </string-array>
    <string-array name="sample_rates">
        <item>SENSOR_DELAY_NORMAL</item>
        <item>SENSOR_DELAY_UI</item>
        <item>SENSOR_DELAY_GAME</item>
        <item>SENSOR_DELAY_FASTEST</item>
    </string-array>
    <string-array name="sample_rates_all">
        <item>Suggest Sample Rate</item>
        <item>SENSOR_DELAY_NORMAL</item>
        <item>SENSOR_DELAY_UI</item>
        <item>SENSOR_DELAY_GAME</item>
        <item>SENSOR_DELAY_FASTEST</item>
        <item>OFF</item>
    </string-array>
</resources>