<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true"
    android:scrollbars="vertical" >

    <HorizontalScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/settings_text_view"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textSize="30sp"
                android:text="@string/prefsScreen" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/label1"
                    android:textSize="20sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/emailLabel" />

                <EditText
                    android:id="@+id/my_email"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/emailPrompt"
                    android:inputType="textEmailAddress" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/label2"
                    android:textSize="20sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fileNameLabel" />

                <EditText
                    android:id="@+id/fileName"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/defaultOutputFile"
                    android:inputType="text" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:textSize="20sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/statsFileNameLabel" />

                <EditText
                    android:id="@+id/statsFileName"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/statsOutputFile"
                    android:inputType="text" />
            </LinearLayout>
            
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/label3"
                    android:textSize="20sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/maxFileMsgsLabel" />

                <EditText
                    android:id="@+id/maxFileMsgs"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/maxFileMsgsPrompt"
                    android:inputType="numberDecimal" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:textSize="20sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/btPrefixLabel" />

                <EditText
                    android:id="@+id/btPrefix"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/btPrefix"
                    android:inputType="text" />
            </LinearLayout>
           
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:textSize="20sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ipCodeLabel" />

                <EditText
                    android:id="@+id/ipCode"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/ipCode"
                    android:inputType="text" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:textSize="20sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ipPortLabel" />

                <EditText
                    android:id="@+id/ipPort"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/ipPort"
                    android:inputType="text" />
            </LinearLayout>            
            <CheckBox
                android:id="@+id/remote_enable"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/enable_remote" />

            <CheckBox
                android:id="@+id/enable_javascript"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/enable_javascript" />

            <CheckBox
                android:id="@+id/enable_device_debug"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/enable_device_debug" />
            <CheckBox
                android:id="@+id/enable_rpc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/enable_rpc" />
            <CheckBox
                android:id="@+id/enable_virtual_gyro"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/enable_virtual_gyro" />
            
            <TableLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <TableRow
                    android:id="@+id/tableRow2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="20sp"
                        android:text="@string/orientationLabel" />

                    <Spinner
                        android:id="@+id/orientation_spinner"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="2dip"
                        android:background="@drawable/button_simple"
                        android:padding="5dip"
                        android:visibility="visible" />
                </TableRow>

                <TableRow
                    android:id="@+id/tableRow1"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content" >

                    <TextView
                        android:id="@+id/label4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="20sp"
                        android:text="@string/accRateLabel" />

                    <Spinner
                        android:id="@+id/acc_rate_spinner"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="2dip"
                        android:background="@drawable/button_simple"
                        android:padding="5dip"
                        android:visibility="visible" />
                </TableRow>

                <TableRow>

                    <TextView
                        android:id="@+id/label5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="20sp"
                        android:text="@string/magRateLabel" />

                    <Spinner
                        android:id="@+id/mag_rate_spinner"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="2dip"
                        android:background="@drawable/button_simple"
                        android:padding="5dip"
                        android:visibility="visible" />
                </TableRow>

                <TableRow
                    android:id="@+id/tableRow3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" >

                    <TextView
                        android:id="@+id/label6"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="20sp"
                        android:text="@string/gyroRateLabel" />

                    <Spinner
                        android:id="@+id/gyro_rate_spinner"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="2dip"
                        android:background="@drawable/button_simple"
                        android:padding="5dip"
                        android:visibility="visible" />
                </TableRow>

                <TableRow
                    android:id="@+id/tableRow4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" >

                    <TextView
                        android:id="@+id/rotationVectorRateLabel"
                        android:textSize="20sp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/rotationVectorRateLabel" />

                    <Spinner
                        android:id="@+id/rotaton_vector_rate_spinner"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="2dip"
                        android:background="@drawable/button_simple"
                        android:padding="5dip"
                        android:visibility="visible" />
                </TableRow>
            </TableLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:orientation="horizontal" >

                <Button
                    android:id="@+id/cancel_prefs_button"
                    android:background="@drawable/button_simple"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dip"
                    android:padding="5dip"
                    android:text="@string/cancel" />

                <Button
                    android:id="@+id/exit_prefs_button"
                    android:background="@drawable/button_simple"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dip"
                    android:padding="5dip"
                    android:text="@string/save_exit" />
            </LinearLayout>
        </LinearLayout>
    </HorizontalScrollView>
</ScrollView>